--- a/layouts/partials/docs/footer.html
+++ b/layouts/partials/docs/footer.html
@@ -1,12 +1,12 @@
 <!-- Scripts -->
 <!-- Core JS  -->
-<script src="/assets/libs/jquery/dist/jquery.min.js"></script>
-<script src="/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/assets/libs/feather-icons/dist/feather.min.js"></script>
+<script src="{{ "assets/libs/jquery/dist/jquery.min.js" | relURL }}"></script>
+<script src="{{ "assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js" | relURL }}"></script>
+<script src="{{ "assets/libs/feather-icons/dist/feather.min.js" | relURL }}"></script>
 <!-- Docs JS -->
-<script src="/assets/libs/clipboard/dist/clipboard.min.js"></script>
+<script src="{{ "assets/libs/clipboard/dist/clipboard.min.js" | relURL }}"></script>
 <!-- Quick JS -->
-<script src="/assets/js/quick-website.js"></script>
+<script src="{{ "assets/js/quick-website.js" | relURL }}"></script>
 <!-- Feather Icons -->
 <script>
     feather.replace({
