--- a/layouts/partials/docs/head.html
+++ b/layouts/partials/docs/head.html
@@ -54,10 +54,10 @@
       });
   </script>
   <!-- Favicon -->
-  <link rel="icon" href="/assets/img/brand/favicon.png" type="image/png"><!-- Font Awesome -->
-  <link rel="stylesheet" href="/assets/libs/@fortawesome/fontawesome-free/css/all.min.css">
+  <link rel="icon" href="{{ "assets/img/brand/favicon.png" | relURL }}" type="image/png"><!-- Font Awesome -->
+  <link rel="stylesheet" href="{{ "assets/libs/@fortawesome/fontawesome-free/css/all.min.css" | relURL }}">
   <!-- Quick CSS -->
-  <link rel="stylesheet" href="/assets/css/quick-website.css">
+  <link rel="stylesheet" href="{{ "assets/css/quick-website.css" | relURL }}">
   <!-- Docs CSS - used only for demo -->
-  <link rel="stylesheet" href="/css/docs.css">
+  <link rel="stylesheet" href="{{ "css/docs.css" | relURL }}">
 </head>
