fix logo home url

--- a/layouts/partials/docs/header.html
+++ b/layouts/partials/docs/header.html
@@ -11,7 +11,7 @@
               </ul>
           </div>
           <!-- Navbar brand -->
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="{{ "" | relURL }}">
               <img alt="Image placeholder" src="{{ "assets/img/brand/dark.svg" | relURL }}" id="navbar-logo">
               <sup class="text-muted text-xs text-uppercase">Docs</sup>
           </a>
